// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zodResolver should return a single error from zodResolver when validation fails 1`] = `
Object {
  "errors": Object {
    "birthYear": Object {
      "message": "Invalid input",
      "type": "invalid_union",
    },
    "confirm": Object {
      "message": "Passwords don't match",
      "type": "custom_error",
    },
    "email": Object {
      "message": "Invalid email",
      "type": "invalid_string",
    },
    "enabled": Object {
      "message": "Required",
      "type": "invalid_type",
    },
    "password": Object {
      "message": "Invalid",
      "type": "invalid_string",
    },
    "repeatPassword": Object {
      "message": "Required",
      "type": "invalid_type",
    },
    "tags": Object {
      "message": "Required",
      "type": "invalid_type",
    },
    "username": Object {
      "message": "Required",
      "type": "invalid_type",
    },
  },
  "values": Object {},
}
`;

exports[`zodResolver should return a single error from zodResolver with \`mode: sync\` when validation fails 1`] = `
Object {
  "errors": Object {
    "birthYear": Object {
      "message": "Invalid input",
      "type": "invalid_union",
    },
    "confirm": Object {
      "message": "Passwords don't match",
      "type": "custom_error",
    },
    "email": Object {
      "message": "Invalid email",
      "type": "invalid_string",
    },
    "enabled": Object {
      "message": "Required",
      "type": "invalid_type",
    },
    "password": Object {
      "message": "Invalid",
      "type": "invalid_string",
    },
    "repeatPassword": Object {
      "message": "Required",
      "type": "invalid_type",
    },
    "tags": Object {
      "message": "Required",
      "type": "invalid_type",
    },
    "username": Object {
      "message": "Required",
      "type": "invalid_type",
    },
  },
  "values": Object {},
}
`;

exports[`zodResolver should return all the errors from zodResolver when validation fails with \`validateAllFieldCriteria\` set to true 1`] = `
Object {
  "errors": Object {
    "birthYear": Object {
      "message": "Invalid input",
      "type": "invalid_union",
      "types": Object {
        "invalid_union": "Invalid input",
      },
    },
    "confirm": Object {
      "message": "Passwords don't match",
      "type": "custom_error",
      "types": Object {
        "custom_error": "Passwords don't match",
      },
    },
    "email": Object {
      "message": "Invalid email",
      "type": "invalid_string",
      "types": Object {
        "invalid_string": "Invalid email",
      },
    },
    "enabled": Object {
      "message": "Required",
      "type": "invalid_type",
      "types": Object {
        "invalid_type": "Required",
      },
    },
    "password": Object {
      "message": "Invalid",
      "type": "invalid_string",
      "types": Object {
        "invalid_string": "Invalid",
      },
    },
    "repeatPassword": Object {
      "message": "Required",
      "type": "invalid_type",
      "types": Object {
        "invalid_type": "Required",
      },
    },
    "tags": Object {
      "message": "Required",
      "type": "invalid_type",
      "types": Object {
        "invalid_type": "Required",
      },
    },
    "username": Object {
      "message": "Required",
      "type": "invalid_type",
      "types": Object {
        "invalid_type": "Required",
      },
    },
  },
  "values": Object {},
}
`;

exports[`zodResolver should return all the errors from zodResolver when validation fails with \`validateAllFieldCriteria\` set to true and \`mode: sync\` 1`] = `
Object {
  "errors": Object {
    "birthYear": Object {
      "message": "Invalid input",
      "type": "invalid_union",
      "types": Object {
        "invalid_union": "Invalid input",
      },
    },
    "confirm": Object {
      "message": "Passwords don't match",
      "type": "custom_error",
      "types": Object {
        "custom_error": "Passwords don't match",
      },
    },
    "email": Object {
      "message": "Invalid email",
      "type": "invalid_string",
      "types": Object {
        "invalid_string": "Invalid email",
      },
    },
    "enabled": Object {
      "message": "Required",
      "type": "invalid_type",
      "types": Object {
        "invalid_type": "Required",
      },
    },
    "password": Object {
      "message": "Invalid",
      "type": "invalid_string",
      "types": Object {
        "invalid_string": "Invalid",
      },
    },
    "repeatPassword": Object {
      "message": "Required",
      "type": "invalid_type",
      "types": Object {
        "invalid_type": "Required",
      },
    },
    "tags": Object {
      "message": "Required",
      "type": "invalid_type",
      "types": Object {
        "invalid_type": "Required",
      },
    },
    "username": Object {
      "message": "Required",
      "type": "invalid_type",
      "types": Object {
        "invalid_type": "Required",
      },
    },
  },
  "values": Object {},
}
`;
